Wed Sep 11 17:03:22 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/init-v2.exp: make test100 only run on client

Tue Aug 20 13:46:54 1996  Barry Jaspan  <bjaspan@mit.edu>

	* Makefile.ov (unit-test-server-body): remove kdb5_edit

	* api.0/init.exp, api.2/init.exp, config/unix.exp, Makefile.ov:
 	use kadmin.local instead of kdb5_edit

Fri Aug 16 17:16:46 1996  Barry Jaspan  <bjaspan@mit.edu>

	* Makefile.ov: update for new lib/kadm5 layout

	* api.1/lock.exp: jik's fix for lock test 13

Thu Jul 18 20:18:30 1996  Marc Horowitz  <marc@mit.edu>

	* api.2/init-v2.exp (test150, test151): -s flag is now -S

Mon Jul  8 17:00:26 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/init-v2.exp: admin databases must now be created before
 	use (not created implicitly)

	* api.1/lock.exp: lock-test 13 should be a warning, not a failure.

	* api.0/rename-principal.exp: fix rename test to create principal
 	with correct salt first, and check explicitly for NO_RENAME_SALT
 	when appropriate

	* lib.t: add create_principal_with_keysalts
	
