@@ -1,3 +1,7 @@
+Fri Sep 20 16:51:26 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* created Makefile.in and configure.in
+
 Wed Sep 11 17:03:22 1996  Barry Jaspan  <bjaspan@mit.edu>
 
 	* api.2/init-v2.exp: make test100 only run on client
